desctop: header, top, corruption, about, benefits, start projects

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
-  @@include('./components/head.html', {"title": "_startProject"})
+  @@include('./components/head.html', {"title": "ES"})
   <body class="home-page">
     <div class="wrapper">
-      <!-- Header section -->
-      @@include('./components/header.html')
-
+      <!-- Top section -->
+      @@include('./components/top.html')
+      <!-- Corruption section -->
+      @@include('./components/corruption.html')
+      <!-- About section -->
+      @@include('./components/about.html')
+      <!-- Benefits section -->
+      @@include('./components/benefits.html')
+      <!-- Projects section -->
+      @@include('./components/projects.html')
       <!-- Footer section -->
       @@include('./components/footer.html')
     </div>
