finish projects, start info

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
       @@include('./components/benefits.html')
       <!-- Projects section -->
       @@include('./components/projects.html')
+      <!-- Info section -->
+      <!-- @@include('./components/info.html') -->
       <!-- Footer section -->
       @@include('./components/footer.html')
     </div>
