finish info, start fileBanner

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,9 @@
       <!-- Projects section -->
       @@include('./components/projects.html')
       <!-- Info section -->
-      <!-- @@include('./components/info.html') -->
+      @@include('./components/info.html')
+      <!-- FileBanner section -->
+      @@include('./components/fileBanner.html')
       <!-- Footer section -->
       @@include('./components/footer.html')
     </div>
