finish desctop without modal windows

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   @@include('./components/head.html', {"title": "ES"})
   <body class="home-page">
     <div class="wrapper">
+      @@include('./components/header-scrollTop.html')
       <!-- Top section -->
       @@include('./components/top.html')
       <!-- Corruption section -->
@@ -17,6 +18,16 @@
       @@include('./components/info.html')
       <!-- FileBanner section -->
       @@include('./components/fileBanner.html')
+      <!-- Personal section -->
+      @@include('./components/personal.html')
+      <!-- Services section -->
+      @@include('./components/services.html')
+      <!-- Clients section -->
+      @@include('./components/clients.html')
+      <!-- Documentation section -->
+      @@include('./components/documentation.html')
+      <!-- Order section -->
+      @@include('./components/order.html')
       <!-- Footer section -->
       @@include('./components/footer.html')
     </div>
