added countUp plugin; added modal window; start adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   @@include('./components/head.html', {"title": "ES"})
   <body class="home-page">
     <div class="wrapper">
-      @@include('./components/header-scrollTop.html')
+      <!-- @@include('./components/header-scrollTop.html') -->
       <!-- Top section -->
       @@include('./components/top.html')
       <!-- Corruption section -->
@@ -30,6 +30,9 @@
       @@include('./components/order.html')
       <!-- Footer section -->
       @@include('./components/footer.html')
+
+      <!-- Modals -->
+      @@include('./components/modals.html')
     </div>
     <script src="js/main.min.js" defer></script>
   </body>
