--- a/app/index.html
+++ b/app/index.html
@@ -17,17 +17,17 @@
       <!-- Info section -->
       @@include('./components/info.html')
       <!-- FileBanner section -->
-      <!-- @@include('./components/fileBanner.html') -->
+      @@include('./components/fileBanner.html')
       <!-- Personal section -->
-      <!-- @@include('./components/personal.html') -->
+      @@include('./components/personal.html')
       <!-- Services section -->
-      <!-- @@include('./components/services.html') -->
+      @@include('./components/services.html')
       <!-- Clients section -->
-      <!-- @@include('./components/clients.html') -->
+      @@include('./components/clients.html')
       <!-- Documentation section -->
-      <!-- @@include('./components/documentation.html') -->
+      @@include('./components/documentation.html')
       <!-- Order section -->
-      <!-- @@include('./components/order.html') -->
+      @@include('./components/order.html')
       <!-- Footer section -->
       <!-- @@include('./components/footer.html') -->
 
